--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Soyez les bienvenus sur le site de MACRault Photography, où vous trouverez une bonne partie de mon travail.
+Soyez les bienvenus sur le site de MACRault Photography.
