--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Soyez les bienvenus sur le site de MACRault Photography.
+<HTML>
+<HEAD>
+    <TITLE>Page de présentation</TITLE>
+</HEAD>
+ 
+<BODY> 
+<marquee height="40" bgcolor="yellow">Bienvenue sur MACRault-photography</marquee>
+
+</BODY>
