--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
  
 <BODY> 
 <marquee height="40" bgcolor="yellow">Bienvenue sur MACRault-photography</marquee>
- <font face="Arial Narrow"> Voici un aperçu de mon travail photographique </font>
+ 
+ 
+ <font face="Times new roman"> Voici un aperçu de mon travail photographique </font>
 
 </BODY>
